// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > gameboy-dark 1`] = `
{
  "id": "gameboy",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "#0f2410",
    ],
    [
      "--foreground",
      "#b8d143",
    ],
    [
      "--card",
      "#16311a",
    ],
    [
      "--card-foreground",
      "#b8d143",
    ],
    [
      "--popover",
      "#1c3d21",
    ],
    [
      "--popover-foreground",
      "#b8d143",
    ],
    [
      "--primary",
      "#9bbc0f",
    ],
    [
      "--primary-foreground",
      "#0f2410",
    ],
    [
      "--secondary",
      "#16311a",
    ],
    [
      "--secondary-foreground",
      "#b8d143",
    ],
    [
      "--muted",
      "#16311a",
    ],
    [
      "--muted-foreground",
      "#83a049",
    ],
    [
      "--accent",
      "#1c3d21",
    ],
    [
      "--accent-foreground",
      "#b8d143",
    ],
    [
      "--destructive",
      "#c4553d",
    ],
    [
      "--border",
      "#3d6b3d",
    ],
    [
      "--input",
      "#3d6b3d",
    ],
    [
      "--ring",
      "#9bbc0f",
    ],
    [
      "--sidebar",
      "#0a1a0b",
    ],
    [
      "--sidebar-foreground",
      "#b8d143",
    ],
    [
      "--sidebar-primary",
      "#9bbc0f",
    ],
    [
      "--sidebar-primary-foreground",
      "#0f2410",
    ],
    [
      "--sidebar-accent",
      "#1c3d21",
    ],
    [
      "--sidebar-accent-foreground",
      "#b8d143",
    ],
    [
      "--sidebar-border",
      "#3d6b3d",
    ],
    [
      "--sidebar-ring",
      "#9bbc0f",
    ],
    [
      "--radius",
      "0rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "3px",
    ],
    [
      "--frame-radius",
      "0px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "2px",
    ],
    [
      "--panel-border-width",
      "2px",
    ],
    [
      "--slot-border-width",
      "2px",
    ],
    [
      "--control-border-width",
      "2px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#3d6b3d",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "#050d05",
    ],
    [
      "--lift-depth",
      "2px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--chrome-tracking",
      "0.01em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#0f2410",
    ],
    [
      "--terminal-foreground",
      "#b8d143",
    ],
    [
      "--terminal-cursor",
      "#9bbc0f",
    ],
    [
      "--terminal-cursor-accent",
      "#0f2410",
    ],
    [
      "--terminal-selection",
      "rgba(155,188,15,0.28)",
    ],
    [
      "--terminal-ansi-black",
      "#2a4a2a",
    ],
    [
      "--terminal-ansi-red",
      "#e0705c",
    ],
    [
      "--terminal-ansi-green",
      "#9bbc0f",
    ],
    [
      "--terminal-ansi-yellow",
      "#e0b641",
    ],
    [
      "--terminal-ansi-blue",
      "#6aa8d4",
    ],
    [
      "--terminal-ansi-magenta",
      "#c08ab8",
    ],
    [
      "--terminal-ansi-cyan",
      "#5fc4b8",
    ],
    [
      "--terminal-ansi-white",
      "#b8d143",
    ],
    [
      "--terminal-ansi-bright-black",
      "#5a7a4a",
    ],
    [
      "--terminal-ansi-bright-red",
      "#f08a76",
    ],
    [
      "--terminal-ansi-bright-green",
      "#b8d94a",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#f0cf68",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#8ac4e8",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#d8a8d0",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#84dcd0",
    ],
    [
      "--terminal-ansi-bright-white",
      "#dcecb0",
    ],
    [
      "--syntax-comment",
      "#5a7a4a",
    ],
    [
      "--syntax-keyword",
      "#c08ab8",
    ],
    [
      "--syntax-string",
      "#9bbc0f",
    ],
    [
      "--syntax-number",
      "#e0b641",
    ],
    [
      "--syntax-constant",
      "#d8a8d0",
    ],
    [
      "--syntax-func",
      "#6aa8d4",
    ],
    [
      "--syntax-variable",
      "#b8d143",
    ],
    [
      "--syntax-property",
      "#5fc4b8",
    ],
    [
      "--syntax-gutter-fg",
      "#5a7a4a",
    ],
    [
      "--syntax-type",
      "#84dcd0",
    ],
    [
      "--syntax-operator",
      "#b8d143",
    ],
    [
      "--syntax-tag",
      "#e0705c",
    ],
    [
      "--syntax-tag-bracket",
      "#5a7a4a",
    ],
    [
      "--syntax-attr",
      "#f0cf68",
    ],
    [
      "--syntax-attr-value",
      "#9bbc0f",
    ],
    [
      "--syntax-heading",
      "#6aa8d4",
    ],
    [
      "--syntax-link",
      "#5fc4b8",
    ],
    [
      "--syntax-invalid",
      "#f08a76",
    ],
    [
      "--status-added",
      "#9bbc0f",
    ],
    [
      "--status-modified",
      "#e0b641",
    ],
    [
      "--status-deleted",
      "#e1715c",
    ],
    [
      "--status-renamed",
      "#6aa8d4",
    ],
    [
      "--status-warning",
      "#e0b641",
    ],
    [
      "--status-conflict",
      "#5fc4b8",
    ],
    [
      "--status-ok",
      "#9bbc0f",
    ],
    [
      "--emph-faint",
      "15%",
    ],
    [
      "--emph-subtle",
      "40%",
    ],
    [
      "--emph-soft",
      "55%",
    ],
    [
      "--emph-medium",
      "70%",
    ],
    [
      "--emph-strong",
      "85%",
    ],
    [
      "--emph-bold",
      "100%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > gameboy-light 1`] = `
{
  "id": "gameboy",
  "mode": "light",
  "vars": [
    [
      "--background",
      "#c4d17a",
    ],
    [
      "--foreground",
      "#0f380f",
    ],
    [
      "--card",
      "#b5c46a",
    ],
    [
      "--card-foreground",
      "#0f380f",
    ],
    [
      "--popover",
      "#d2dc92",
    ],
    [
      "--popover-foreground",
      "#0f380f",
    ],
    [
      "--primary",
      "#306230",
    ],
    [
      "--primary-foreground",
      "#d2dc92",
    ],
    [
      "--secondary",
      "#b5c46a",
    ],
    [
      "--secondary-foreground",
      "#0f380f",
    ],
    [
      "--muted",
      "#b5c46a",
    ],
    [
      "--muted-foreground",
      "#33541f",
    ],
    [
      "--accent",
      "#9bbc0f",
    ],
    [
      "--accent-foreground",
      "#0f380f",
    ],
    [
      "--destructive",
      "#8b2c2c",
    ],
    [
      "--border",
      "#33541f",
    ],
    [
      "--input",
      "#33541f",
    ],
    [
      "--ring",
      "#306230",
    ],
    [
      "--sidebar",
      "#a8b85e",
    ],
    [
      "--sidebar-foreground",
      "#0f380f",
    ],
    [
      "--sidebar-primary",
      "#306230",
    ],
    [
      "--sidebar-primary-foreground",
      "#d2dc92",
    ],
    [
      "--sidebar-accent",
      "#9bbc0f",
    ],
    [
      "--sidebar-accent-foreground",
      "#0f380f",
    ],
    [
      "--sidebar-border",
      "#33541f",
    ],
    [
      "--sidebar-ring",
      "#306230",
    ],
    [
      "--radius",
      "0rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "3px",
    ],
    [
      "--frame-radius",
      "0px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "2px",
    ],
    [
      "--panel-border-width",
      "2px",
    ],
    [
      "--slot-border-width",
      "2px",
    ],
    [
      "--control-border-width",
      "2px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#d2dc92",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "#33541f",
    ],
    [
      "--lift-depth",
      "2px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--chrome-tracking",
      "0.01em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#c4d17a",
    ],
    [
      "--terminal-foreground",
      "#0f380f",
    ],
    [
      "--terminal-cursor",
      "#306230",
    ],
    [
      "--terminal-cursor-accent",
      "#c4d17a",
    ],
    [
      "--terminal-selection",
      "rgba(48,98,48,0.30)",
    ],
    [
      "--terminal-ansi-black",
      "#0f380f",
    ],
    [
      "--terminal-ansi-red",
      "#7a2020",
    ],
    [
      "--terminal-ansi-green",
      "#2f5d18",
    ],
    [
      "--terminal-ansi-yellow",
      "#6b4a05",
    ],
    [
      "--terminal-ansi-blue",
      "#1e4a6b",
    ],
    [
      "--terminal-ansi-magenta",
      "#5f2d55",
    ],
    [
      "--terminal-ansi-cyan",
      "#145450",
    ],
    [
      "--terminal-ansi-white",
      "#40561f",
    ],
    [
      "--terminal-ansi-bright-black",
      "#33541f",
    ],
    [
      "--terminal-ansi-bright-red",
      "#5e1717",
    ],
    [
      "--terminal-ansi-bright-green",
      "#244a12",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#523904",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#173a52",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#4a2342",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#0f423f",
    ],
    [
      "--terminal-ansi-bright-white",
      "#0a2b0a",
    ],
    [
      "--syntax-comment",
      "#33541f",
    ],
    [
      "--syntax-keyword",
      "#5f2d55",
    ],
    [
      "--syntax-string",
      "#2f5d18",
    ],
    [
      "--syntax-number",
      "#6b4a05",
    ],
    [
      "--syntax-constant",
      "#4a2342",
    ],
    [
      "--syntax-func",
      "#1e4a6b",
    ],
    [
      "--syntax-variable",
      "#0f380f",
    ],
    [
      "--syntax-property",
      "#145450",
    ],
    [
      "--syntax-gutter-fg",
      "#33541f",
    ],
    [
      "--syntax-type",
      "#0f423f",
    ],
    [
      "--syntax-operator",
      "#0f380f",
    ],
    [
      "--syntax-tag",
      "#7a2020",
    ],
    [
      "--syntax-tag-bracket",
      "#33541f",
    ],
    [
      "--syntax-attr",
      "#523904",
    ],
    [
      "--syntax-attr-value",
      "#2f5d18",
    ],
    [
      "--syntax-heading",
      "#1e4a6b",
    ],
    [
      "--syntax-link",
      "#145450",
    ],
    [
      "--syntax-invalid",
      "#5e1717",
    ],
    [
      "--status-added",
      "#295610",
    ],
    [
      "--status-modified",
      "#674600",
    ],
    [
      "--status-deleted",
      "#7a2020",
    ],
    [
      "--status-renamed",
      "#1e4a6b",
    ],
    [
      "--status-warning",
      "#674600",
    ],
    [
      "--status-conflict",
      "#145450",
    ],
    [
      "--status-ok",
      "#295610",
    ],
    [
      "--emph-faint",
      "15%",
    ],
    [
      "--emph-subtle",
      "40%",
    ],
    [
      "--emph-soft",
      "55%",
    ],
    [
      "--emph-medium",
      "70%",
    ],
    [
      "--emph-strong",
      "85%",
    ],
    [
      "--emph-bold",
      "100%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > gruvbox-dark 1`] = `
{
  "id": "gruvbox",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "#282828",
    ],
    [
      "--foreground",
      "#ebdbb2",
    ],
    [
      "--card",
      "#32302f",
    ],
    [
      "--card-foreground",
      "#ebdbb2",
    ],
    [
      "--popover",
      "#32302f",
    ],
    [
      "--popover-foreground",
      "#ebdbb2",
    ],
    [
      "--primary",
      "#fabd2f",
    ],
    [
      "--primary-foreground",
      "#282828",
    ],
    [
      "--secondary",
      "#3c3836",
    ],
    [
      "--secondary-foreground",
      "#ebdbb2",
    ],
    [
      "--muted",
      "#3c3836",
    ],
    [
      "--muted-foreground",
      "#a89984",
    ],
    [
      "--accent",
      "#3c3836",
    ],
    [
      "--accent-foreground",
      "#ebdbb2",
    ],
    [
      "--destructive",
      "#fb4934",
    ],
    [
      "--border",
      "rgba(235,219,178,0.10)",
    ],
    [
      "--input",
      "rgba(235,219,178,0.14)",
    ],
    [
      "--ring",
      "#fabd2f",
    ],
    [
      "--sidebar",
      "#1d2021",
    ],
    [
      "--sidebar-foreground",
      "#ebdbb2",
    ],
    [
      "--sidebar-primary",
      "#fabd2f",
    ],
    [
      "--sidebar-primary-foreground",
      "#282828",
    ],
    [
      "--sidebar-accent",
      "#3c3836",
    ],
    [
      "--sidebar-accent-foreground",
      "#ebdbb2",
    ],
    [
      "--sidebar-border",
      "rgba(235,219,178,0.10)",
    ],
    [
      "--sidebar-ring",
      "#fabd2f",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-cursor",
      "#ebdbb2",
    ],
    [
      "--terminal-cursor-accent",
      "#282828",
    ],
    [
      "--terminal-selection",
      "rgba(250,189,47,0.25)",
    ],
    [
      "--terminal-ansi-black",
      "#282828",
    ],
    [
      "--terminal-ansi-red",
      "#cc241d",
    ],
    [
      "--terminal-ansi-green",
      "#98971a",
    ],
    [
      "--terminal-ansi-yellow",
      "#d79921",
    ],
    [
      "--terminal-ansi-blue",
      "#458588",
    ],
    [
      "--terminal-ansi-magenta",
      "#b16286",
    ],
    [
      "--terminal-ansi-cyan",
      "#689d6a",
    ],
    [
      "--terminal-ansi-white",
      "#a89984",
    ],
    [
      "--terminal-ansi-bright-black",
      "#928374",
    ],
    [
      "--terminal-ansi-bright-red",
      "#fb4934",
    ],
    [
      "--terminal-ansi-bright-green",
      "#b8bb26",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#fabd2f",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#83a598",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#d3869b",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#8ec07c",
    ],
    [
      "--terminal-ansi-bright-white",
      "#ebdbb2",
    ],
    [
      "--syntax-comment",
      "#928374",
    ],
    [
      "--syntax-keyword",
      "#c6759a",
    ],
    [
      "--syntax-string",
      "#98971a",
    ],
    [
      "--syntax-number",
      "#d79921",
    ],
    [
      "--syntax-constant",
      "#d3869b",
    ],
    [
      "--syntax-func",
      "#59999b",
    ],
    [
      "--syntax-variable",
      "#ebdbb2",
    ],
    [
      "--syntax-property",
      "#689d6a",
    ],
    [
      "--syntax-gutter-fg",
      "#928374",
    ],
    [
      "--syntax-type",
      "#8ec07c",
    ],
    [
      "--syntax-operator",
      "#ebdbb2",
    ],
    [
      "--syntax-tag",
      "#f95546",
    ],
    [
      "--syntax-tag-bracket",
      "#928374",
    ],
    [
      "--syntax-attr",
      "#fabd2f",
    ],
    [
      "--syntax-attr-value",
      "#98971a",
    ],
    [
      "--syntax-heading",
      "#59999b",
    ],
    [
      "--syntax-link",
      "#689d6a",
    ],
    [
      "--syntax-invalid",
      "#ff4f39",
    ],
    [
      "--status-added",
      "#9d9c22",
    ],
    [
      "--status-modified",
      "#d79921",
    ],
    [
      "--status-deleted",
      "#ff6453",
    ],
    [
      "--status-renamed",
      "#61a2a3",
    ],
    [
      "--status-warning",
      "#d79921",
    ],
    [
      "--status-conflict",
      "#6ea470",
    ],
    [
      "--status-ok",
      "#9d9c22",
    ],
    [
      "--emph-faint",
      "10%",
    ],
    [
      "--emph-subtle",
      "30%",
    ],
    [
      "--emph-soft",
      "40%",
    ],
    [
      "--emph-medium",
      "50%",
    ],
    [
      "--emph-strong",
      "60%",
    ],
    [
      "--emph-bold",
      "85%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > gruvbox-light 1`] = `
{
  "id": "gruvbox",
  "mode": "light",
  "vars": [
    [
      "--background",
      "#fbf1c7",
    ],
    [
      "--foreground",
      "#3c3836",
    ],
    [
      "--card",
      "#f9f5d7",
    ],
    [
      "--card-foreground",
      "#3c3836",
    ],
    [
      "--popover",
      "#f9f5d7",
    ],
    [
      "--popover-foreground",
      "#3c3836",
    ],
    [
      "--primary",
      "#b57614",
    ],
    [
      "--primary-foreground",
      "#fbf1c7",
    ],
    [
      "--secondary",
      "#ebdbb2",
    ],
    [
      "--secondary-foreground",
      "#3c3836",
    ],
    [
      "--muted",
      "#ebdbb2",
    ],
    [
      "--muted-foreground",
      "#7c6f64",
    ],
    [
      "--accent",
      "#ebdbb2",
    ],
    [
      "--accent-foreground",
      "#3c3836",
    ],
    [
      "--destructive",
      "#9d0006",
    ],
    [
      "--border",
      "rgba(60,56,54,0.12)",
    ],
    [
      "--input",
      "rgba(60,56,54,0.16)",
    ],
    [
      "--ring",
      "#b57614",
    ],
    [
      "--sidebar",
      "#f2e5bc",
    ],
    [
      "--sidebar-foreground",
      "#3c3836",
    ],
    [
      "--sidebar-primary",
      "#b57614",
    ],
    [
      "--sidebar-primary-foreground",
      "#fbf1c7",
    ],
    [
      "--sidebar-accent",
      "#ebdbb2",
    ],
    [
      "--sidebar-accent-foreground",
      "#3c3836",
    ],
    [
      "--sidebar-border",
      "rgba(60,56,54,0.12)",
    ],
    [
      "--sidebar-ring",
      "#b57614",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-cursor",
      "#3c3836",
    ],
    [
      "--terminal-cursor-accent",
      "#fbf1c7",
    ],
    [
      "--terminal-selection",
      "rgba(181,118,20,0.22)",
    ],
    [
      "--terminal-ansi-black",
      "#fbf1c7",
    ],
    [
      "--terminal-ansi-red",
      "#9d0006",
    ],
    [
      "--terminal-ansi-green",
      "#79740e",
    ],
    [
      "--terminal-ansi-yellow",
      "#b57614",
    ],
    [
      "--terminal-ansi-blue",
      "#076678",
    ],
    [
      "--terminal-ansi-magenta",
      "#8f3f71",
    ],
    [
      "--terminal-ansi-cyan",
      "#427b58",
    ],
    [
      "--terminal-ansi-white",
      "#7c6f64",
    ],
    [
      "--terminal-ansi-bright-black",
      "#928374",
    ],
    [
      "--terminal-ansi-bright-red",
      "#cc241d",
    ],
    [
      "--terminal-ansi-bright-green",
      "#98971a",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#d79921",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#458588",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#b16286",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#689d6a",
    ],
    [
      "--terminal-ansi-bright-white",
      "#3c3836",
    ],
    [
      "--syntax-comment",
      "#928374",
    ],
    [
      "--syntax-keyword",
      "#8f3f71",
    ],
    [
      "--syntax-string",
      "#767006",
    ],
    [
      "--syntax-number",
      "#9d6000",
    ],
    [
      "--syntax-constant",
      "#a25579",
    ],
    [
      "--syntax-func",
      "#076678",
    ],
    [
      "--syntax-variable",
      "#3c3836",
    ],
    [
      "--syntax-property",
      "#407957",
    ],
    [
      "--syntax-gutter-fg",
      "#928374",
    ],
    [
      "--syntax-type",
      "#467949",
    ],
    [
      "--syntax-operator",
      "#3c3836",
    ],
    [
      "--syntax-tag",
      "#9d0006",
    ],
    [
      "--syntax-tag-bracket",
      "#928374",
    ],
    [
      "--syntax-attr",
      "#9b6100",
    ],
    [
      "--syntax-attr-value",
      "#767006",
    ],
    [
      "--syntax-heading",
      "#076678",
    ],
    [
      "--syntax-link",
      "#407957",
    ],
    [
      "--syntax-invalid",
      "#cc241d",
    ],
    [
      "--status-added",
      "#767006",
    ],
    [
      "--status-modified",
      "#9d6000",
    ],
    [
      "--status-deleted",
      "#9d0006",
    ],
    [
      "--status-renamed",
      "#076678",
    ],
    [
      "--status-warning",
      "#9d6000",
    ],
    [
      "--status-conflict",
      "#407957",
    ],
    [
      "--status-ok",
      "#767006",
    ],
    [
      "--emph-faint",
      "10%",
    ],
    [
      "--emph-subtle",
      "30%",
    ],
    [
      "--emph-soft",
      "40%",
    ],
    [
      "--emph-medium",
      "50%",
    ],
    [
      "--emph-strong",
      "60%",
    ],
    [
      "--emph-bold",
      "85%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > kanagawa-dark 1`] = `
{
  "id": "kanagawa",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "#1f1f28",
    ],
    [
      "--foreground",
      "#dcd7ba",
    ],
    [
      "--card",
      "#16161d",
    ],
    [
      "--card-foreground",
      "#dcd7ba",
    ],
    [
      "--popover",
      "#16161d",
    ],
    [
      "--popover-foreground",
      "#dcd7ba",
    ],
    [
      "--primary",
      "#7e9cd8",
    ],
    [
      "--primary-foreground",
      "#1f1f28",
    ],
    [
      "--secondary",
      "#2a2a37",
    ],
    [
      "--secondary-foreground",
      "#dcd7ba",
    ],
    [
      "--muted",
      "#2a2a37",
    ],
    [
      "--muted-foreground",
      "#a09f96",
    ],
    [
      "--accent",
      "#363646",
    ],
    [
      "--accent-foreground",
      "#dcd7ba",
    ],
    [
      "--destructive",
      "#c34043",
    ],
    [
      "--border",
      "rgba(220,215,186,0.08)",
    ],
    [
      "--input",
      "rgba(220,215,186,0.12)",
    ],
    [
      "--ring",
      "#7e9cd8",
    ],
    [
      "--sidebar",
      "#16161d",
    ],
    [
      "--sidebar-foreground",
      "#dcd7ba",
    ],
    [
      "--sidebar-primary",
      "#7e9cd8",
    ],
    [
      "--sidebar-primary-foreground",
      "#1f1f28",
    ],
    [
      "--sidebar-accent",
      "#2a2a37",
    ],
    [
      "--sidebar-accent-foreground",
      "#dcd7ba",
    ],
    [
      "--sidebar-border",
      "rgba(220,215,186,0.08)",
    ],
    [
      "--sidebar-ring",
      "#7e9cd8",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-cursor",
      "#c8c093",
    ],
    [
      "--terminal-cursor-accent",
      "#1f1f28",
    ],
    [
      "--terminal-selection",
      "rgba(45,79,103,0.45)",
    ],
    [
      "--terminal-ansi-black",
      "#090618",
    ],
    [
      "--terminal-ansi-red",
      "#c34043",
    ],
    [
      "--terminal-ansi-green",
      "#76946a",
    ],
    [
      "--terminal-ansi-yellow",
      "#c0a36e",
    ],
    [
      "--terminal-ansi-blue",
      "#7e9cd8",
    ],
    [
      "--terminal-ansi-magenta",
      "#957fb8",
    ],
    [
      "--terminal-ansi-cyan",
      "#6a9589",
    ],
    [
      "--terminal-ansi-white",
      "#c8c093",
    ],
    [
      "--terminal-ansi-bright-black",
      "#727169",
    ],
    [
      "--terminal-ansi-bright-red",
      "#e82424",
    ],
    [
      "--terminal-ansi-bright-green",
      "#98bb6c",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#e6c384",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#7fb4ca",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#938aa9",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#7aa89f",
    ],
    [
      "--terminal-ansi-bright-white",
      "#dcd7ba",
    ],
    [
      "--syntax-comment",
      "#727169",
    ],
    [
      "--syntax-keyword",
      "#957fb8",
    ],
    [
      "--syntax-string",
      "#76946a",
    ],
    [
      "--syntax-number",
      "#c0a36e",
    ],
    [
      "--syntax-constant",
      "#938aa9",
    ],
    [
      "--syntax-func",
      "#7e9cd8",
    ],
    [
      "--syntax-variable",
      "#dcd7ba",
    ],
    [
      "--syntax-property",
      "#6a9589",
    ],
    [
      "--syntax-gutter-fg",
      "#727169",
    ],
    [
      "--syntax-type",
      "#7aa89f",
    ],
    [
      "--syntax-operator",
      "#dcd7ba",
    ],
    [
      "--syntax-tag",
      "#e05b5a",
    ],
    [
      "--syntax-tag-bracket",
      "#727169",
    ],
    [
      "--syntax-attr",
      "#e6c384",
    ],
    [
      "--syntax-attr-value",
      "#76946a",
    ],
    [
      "--syntax-heading",
      "#7e9cd8",
    ],
    [
      "--syntax-link",
      "#6a9589",
    ],
    [
      "--syntax-invalid",
      "#fb3c36",
    ],
    [
      "--status-added",
      "#76946a",
    ],
    [
      "--status-modified",
      "#c0a36e",
    ],
    [
      "--status-deleted",
      "#e05b5a",
    ],
    [
      "--status-renamed",
      "#7e9cd8",
    ],
    [
      "--status-warning",
      "#c0a36e",
    ],
    [
      "--status-conflict",
      "#6a9589",
    ],
    [
      "--status-ok",
      "#76946a",
    ],
    [
      "--emph-faint",
      "10%",
    ],
    [
      "--emph-subtle",
      "30%",
    ],
    [
      "--emph-soft",
      "40%",
    ],
    [
      "--emph-medium",
      "50%",
    ],
    [
      "--emph-strong",
      "60%",
    ],
    [
      "--emph-bold",
      "85%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > kanagawa-dragon-dark 1`] = `
{
  "id": "kanagawa-dragon",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "#181616",
    ],
    [
      "--foreground",
      "#c5c9c5",
    ],
    [
      "--card",
      "#0d0c0c",
    ],
    [
      "--card-foreground",
      "#c5c9c5",
    ],
    [
      "--popover",
      "#0d0c0c",
    ],
    [
      "--popover-foreground",
      "#c5c9c5",
    ],
    [
      "--primary",
      "#8ba4b0",
    ],
    [
      "--primary-foreground",
      "#181616",
    ],
    [
      "--secondary",
      "#282727",
    ],
    [
      "--secondary-foreground",
      "#c5c9c5",
    ],
    [
      "--muted",
      "#282727",
    ],
    [
      "--muted-foreground",
      "#a6a69c",
    ],
    [
      "--accent",
      "#393836",
    ],
    [
      "--accent-foreground",
      "#c5c9c5",
    ],
    [
      "--destructive",
      "#c4746e",
    ],
    [
      "--border",
      "rgba(197,201,197,0.08)",
    ],
    [
      "--input",
      "rgba(197,201,197,0.12)",
    ],
    [
      "--ring",
      "#8ba4b0",
    ],
    [
      "--sidebar",
      "#0d0c0c",
    ],
    [
      "--sidebar-foreground",
      "#c5c9c5",
    ],
    [
      "--sidebar-primary",
      "#8ba4b0",
    ],
    [
      "--sidebar-primary-foreground",
      "#181616",
    ],
    [
      "--sidebar-accent",
      "#282727",
    ],
    [
      "--sidebar-accent-foreground",
      "#c5c9c5",
    ],
    [
      "--sidebar-border",
      "rgba(197,201,197,0.08)",
    ],
    [
      "--sidebar-ring",
      "#8ba4b0",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-cursor",
      "#c5c9c5",
    ],
    [
      "--terminal-cursor-accent",
      "#181616",
    ],
    [
      "--terminal-selection",
      "rgba(45,79,103,0.45)",
    ],
    [
      "--terminal-ansi-black",
      "#0d0c0c",
    ],
    [
      "--terminal-ansi-red",
      "#c4746e",
    ],
    [
      "--terminal-ansi-green",
      "#8a9a7b",
    ],
    [
      "--terminal-ansi-yellow",
      "#c4b28a",
    ],
    [
      "--terminal-ansi-blue",
      "#8ba4b0",
    ],
    [
      "--terminal-ansi-magenta",
      "#a292a3",
    ],
    [
      "--terminal-ansi-cyan",
      "#8ea4a2",
    ],
    [
      "--terminal-ansi-white",
      "#c8c093",
    ],
    [
      "--terminal-ansi-bright-black",
      "#a6a69c",
    ],
    [
      "--terminal-ansi-bright-red",
      "#e46876",
    ],
    [
      "--terminal-ansi-bright-green",
      "#87a987",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#e6c384",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#7fb4ca",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#938aa9",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#7aa89f",
    ],
    [
      "--terminal-ansi-bright-white",
      "#c5c9c5",
    ],
    [
      "--syntax-comment",
      "#a6a69c",
    ],
    [
      "--syntax-keyword",
      "#a292a3",
    ],
    [
      "--syntax-string",
      "#8a9a7b",
    ],
    [
      "--syntax-number",
      "#c4b28a",
    ],
    [
      "--syntax-constant",
      "#938aa9",
    ],
    [
      "--syntax-func",
      "#8ba4b0",
    ],
    [
      "--syntax-variable",
      "#c5c9c5",
    ],
    [
      "--syntax-property",
      "#8ea4a2",
    ],
    [
      "--syntax-gutter-fg",
      "#a6a69c",
    ],
    [
      "--syntax-type",
      "#7aa89f",
    ],
    [
      "--syntax-operator",
      "#c5c9c5",
    ],
    [
      "--syntax-tag",
      "#c4746e",
    ],
    [
      "--syntax-tag-bracket",
      "#a6a69c",
    ],
    [
      "--syntax-attr",
      "#e6c384",
    ],
    [
      "--syntax-attr-value",
      "#8a9a7b",
    ],
    [
      "--syntax-heading",
      "#8ba4b0",
    ],
    [
      "--syntax-link",
      "#8ea4a2",
    ],
    [
      "--syntax-invalid",
      "#e46876",
    ],
    [
      "--status-added",
      "#8a9a7b",
    ],
    [
      "--status-modified",
      "#c4b28a",
    ],
    [
      "--status-deleted",
      "#c4746e",
    ],
    [
      "--status-renamed",
      "#8ba4b0",
    ],
    [
      "--status-warning",
      "#c4b28a",
    ],
    [
      "--status-conflict",
      "#8ea4a2",
    ],
    [
      "--status-ok",
      "#8a9a7b",
    ],
    [
      "--emph-faint",
      "10%",
    ],
    [
      "--emph-subtle",
      "30%",
    ],
    [
      "--emph-soft",
      "40%",
    ],
    [
      "--emph-medium",
      "50%",
    ],
    [
      "--emph-strong",
      "60%",
    ],
    [
      "--emph-bold",
      "85%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > kanagawa-dragon-light 1`] = `
{
  "id": "kanagawa-dragon",
  "mode": "light",
  "vars": [
    [
      "--background",
      "#181616",
    ],
    [
      "--foreground",
      "#c5c9c5",
    ],
    [
      "--card",
      "#0d0c0c",
    ],
    [
      "--card-foreground",
      "#c5c9c5",
    ],
    [
      "--popover",
      "#0d0c0c",
    ],
    [
      "--popover-foreground",
      "#c5c9c5",
    ],
    [
      "--primary",
      "#8ba4b0",
    ],
    [
      "--primary-foreground",
      "#181616",
    ],
    [
      "--secondary",
      "#282727",
    ],
    [
      "--secondary-foreground",
      "#c5c9c5",
    ],
    [
      "--muted",
      "#282727",
    ],
    [
      "--muted-foreground",
      "#a6a69c",
    ],
    [
      "--accent",
      "#393836",
    ],
    [
      "--accent-foreground",
      "#c5c9c5",
    ],
    [
      "--destructive",
      "#c4746e",
    ],
    [
      "--border",
      "rgba(197,201,197,0.08)",
    ],
    [
      "--input",
      "rgba(197,201,197,0.12)",
    ],
    [
      "--ring",
      "#8ba4b0",
    ],
    [
      "--sidebar",
      "#0d0c0c",
    ],
    [
      "--sidebar-foreground",
      "#c5c9c5",
    ],
    [
      "--sidebar-primary",
      "#8ba4b0",
    ],
    [
      "--sidebar-primary-foreground",
      "#181616",
    ],
    [
      "--sidebar-accent",
      "#282727",
    ],
    [
      "--sidebar-accent-foreground",
      "#c5c9c5",
    ],
    [
      "--sidebar-border",
      "rgba(197,201,197,0.08)",
    ],
    [
      "--sidebar-ring",
      "#8ba4b0",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-cursor",
      "#c5c9c5",
    ],
    [
      "--terminal-cursor-accent",
      "#181616",
    ],
    [
      "--terminal-selection",
      "rgba(45,79,103,0.45)",
    ],
    [
      "--terminal-ansi-black",
      "#0d0c0c",
    ],
    [
      "--terminal-ansi-red",
      "#c4746e",
    ],
    [
      "--terminal-ansi-green",
      "#8a9a7b",
    ],
    [
      "--terminal-ansi-yellow",
      "#c4b28a",
    ],
    [
      "--terminal-ansi-blue",
      "#8ba4b0",
    ],
    [
      "--terminal-ansi-magenta",
      "#a292a3",
    ],
    [
      "--terminal-ansi-cyan",
      "#8ea4a2",
    ],
    [
      "--terminal-ansi-white",
      "#c8c093",
    ],
    [
      "--terminal-ansi-bright-black",
      "#a6a69c",
    ],
    [
      "--terminal-ansi-bright-red",
      "#e46876",
    ],
    [
      "--terminal-ansi-bright-green",
      "#87a987",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#e6c384",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#7fb4ca",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#938aa9",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#7aa89f",
    ],
    [
      "--terminal-ansi-bright-white",
      "#c5c9c5",
    ],
    [
      "--syntax-comment",
      "#a6a69c",
    ],
    [
      "--syntax-keyword",
      "#a292a3",
    ],
    [
      "--syntax-string",
      "#8a9a7b",
    ],
    [
      "--syntax-number",
      "#c4b28a",
    ],
    [
      "--syntax-constant",
      "#938aa9",
    ],
    [
      "--syntax-func",
      "#8ba4b0",
    ],
    [
      "--syntax-variable",
      "#c5c9c5",
    ],
    [
      "--syntax-property",
      "#8ea4a2",
    ],
    [
      "--syntax-gutter-fg",
      "#a6a69c",
    ],
    [
      "--syntax-type",
      "#7aa89f",
    ],
    [
      "--syntax-operator",
      "#c5c9c5",
    ],
    [
      "--syntax-tag",
      "#c4746e",
    ],
    [
      "--syntax-tag-bracket",
      "#a6a69c",
    ],
    [
      "--syntax-attr",
      "#e6c384",
    ],
    [
      "--syntax-attr-value",
      "#8a9a7b",
    ],
    [
      "--syntax-heading",
      "#8ba4b0",
    ],
    [
      "--syntax-link",
      "#8ea4a2",
    ],
    [
      "--syntax-invalid",
      "#e46876",
    ],
    [
      "--status-added",
      "#8a9a7b",
    ],
    [
      "--status-modified",
      "#c4b28a",
    ],
    [
      "--status-deleted",
      "#c4746e",
    ],
    [
      "--status-renamed",
      "#8ba4b0",
    ],
    [
      "--status-warning",
      "#c4b28a",
    ],
    [
      "--status-conflict",
      "#8ea4a2",
    ],
    [
      "--status-ok",
      "#8a9a7b",
    ],
    [
      "--emph-faint",
      "10%",
    ],
    [
      "--emph-subtle",
      "30%",
    ],
    [
      "--emph-soft",
      "40%",
    ],
    [
      "--emph-medium",
      "50%",
    ],
    [
      "--emph-strong",
      "60%",
    ],
    [
      "--emph-bold",
      "85%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > kanagawa-light 1`] = `
{
  "id": "kanagawa",
  "mode": "light",
  "vars": [
    [
      "--background",
      "#f2ecbc",
    ],
    [
      "--foreground",
      "#545464",
    ],
    [
      "--card",
      "#e5ddb0",
    ],
    [
      "--card-foreground",
      "#545464",
    ],
    [
      "--popover",
      "#e5ddb0",
    ],
    [
      "--popover-foreground",
      "#545464",
    ],
    [
      "--primary",
      "#4d699b",
    ],
    [
      "--primary-foreground",
      "#f2ecbc",
    ],
    [
      "--secondary",
      "#e5ddb0",
    ],
    [
      "--secondary-foreground",
      "#545464",
    ],
    [
      "--muted",
      "#e5ddb0",
    ],
    [
      "--muted-foreground",
      "#8a8980",
    ],
    [
      "--accent",
      "#dcd5ac",
    ],
    [
      "--accent-foreground",
      "#545464",
    ],
    [
      "--destructive",
      "#c84053",
    ],
    [
      "--border",
      "rgba(84,84,100,0.14)",
    ],
    [
      "--input",
      "rgba(84,84,100,0.2)",
    ],
    [
      "--ring",
      "#4d699b",
    ],
    [
      "--sidebar",
      "#e5ddb0",
    ],
    [
      "--sidebar-foreground",
      "#545464",
    ],
    [
      "--sidebar-primary",
      "#4d699b",
    ],
    [
      "--sidebar-primary-foreground",
      "#f2ecbc",
    ],
    [
      "--sidebar-accent",
      "#dcd5ac",
    ],
    [
      "--sidebar-accent-foreground",
      "#545464",
    ],
    [
      "--sidebar-border",
      "rgba(84,84,100,0.14)",
    ],
    [
      "--sidebar-ring",
      "#4d699b",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-cursor",
      "#43436c",
    ],
    [
      "--terminal-cursor-accent",
      "#f2ecbc",
    ],
    [
      "--terminal-selection",
      "rgba(220,213,172,0.7)",
    ],
    [
      "--terminal-ansi-black",
      "#1f1f28",
    ],
    [
      "--terminal-ansi-red",
      "#c84053",
    ],
    [
      "--terminal-ansi-green",
      "#6f894e",
    ],
    [
      "--terminal-ansi-yellow",
      "#77713f",
    ],
    [
      "--terminal-ansi-blue",
      "#4d699b",
    ],
    [
      "--terminal-ansi-magenta",
      "#b35b79",
    ],
    [
      "--terminal-ansi-cyan",
      "#597b75",
    ],
    [
      "--terminal-ansi-white",
      "#545464",
    ],
    [
      "--terminal-ansi-bright-black",
      "#8a8980",
    ],
    [
      "--terminal-ansi-bright-red",
      "#d7474b",
    ],
    [
      "--terminal-ansi-bright-green",
      "#6e915f",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#836f4a",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#6693bf",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#624c83",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#5e857a",
    ],
    [
      "--terminal-ansi-bright-white",
      "#43436c",
    ],
    [
      "--syntax-comment",
      "#88877f",
    ],
    [
      "--syntax-keyword",
      "#a44e6c",
    ],
    [
      "--syntax-string",
      "#597238",
    ],
    [
      "--syntax-number",
      "#726b3a",
    ],
    [
      "--syntax-constant",
      "#624c83",
    ],
    [
      "--syntax-func",
      "#4d699b",
    ],
    [
      "--syntax-variable",
      "#545464",
    ],
    [
      "--syntax-property",
      "#4f706b",
    ],
    [
      "--syntax-gutter-fg",
      "#88877f",
    ],
    [
      "--syntax-type",
      "#4b7167",
    ],
    [
      "--syntax-operator",
      "#545464",
    ],
    [
      "--syntax-tag",
      "#bf384c",
    ],
    [
      "--syntax-tag-bracket",
      "#88877f",
    ],
    [
      "--syntax-attr",
      "#7b6743",
    ],
    [
      "--syntax-attr-value",
      "#597238",
    ],
    [
      "--syntax-heading",
      "#4d699b",
    ],
    [
      "--syntax-link",
      "#4f706b",
    ],
    [
      "--syntax-invalid",
      "#c3343b",
    ],
    [
      "--status-added",
      "#50682f",
    ],
    [
      "--status-modified",
      "#696232",
    ],
    [
      "--status-deleted",
      "#b42d44",
    ],
    [
      "--status-renamed",
      "#466193",
    ],
    [
      "--status-warning",
      "#696232",
    ],
    [
      "--status-conflict",
      "#476763",
    ],
    [
      "--status-ok",
      "#50682f",
    ],
    [
      "--emph-faint",
      "10%",
    ],
    [
      "--emph-subtle",
      "30%",
    ],
    [
      "--emph-soft",
      "40%",
    ],
    [
      "--emph-medium",
      "50%",
    ],
    [
      "--emph-strong",
      "60%",
    ],
    [
      "--emph-bold",
      "85%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > nothing-dark 1`] = `
{
  "id": "nothing",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "#0b0b0b",
    ],
    [
      "--foreground",
      "#f2f2f2",
    ],
    [
      "--card",
      "#151515",
    ],
    [
      "--card-foreground",
      "#f2f2f2",
    ],
    [
      "--popover",
      "#1c1c1c",
    ],
    [
      "--popover-foreground",
      "#f2f2f2",
    ],
    [
      "--primary",
      "#d63b2e",
    ],
    [
      "--primary-foreground",
      "#ffffff",
    ],
    [
      "--secondary",
      "#1a1a1a",
    ],
    [
      "--secondary-foreground",
      "#e6e6e6",
    ],
    [
      "--muted",
      "#141414",
    ],
    [
      "--muted-foreground",
      "#8a8a8a",
    ],
    [
      "--accent",
      "#181818",
    ],
    [
      "--accent-foreground",
      "#f2f2f2",
    ],
    [
      "--destructive",
      "#d63b2e",
    ],
    [
      "--border",
      "#3a3a3a",
    ],
    [
      "--input",
      "#3a3a3a",
    ],
    [
      "--ring",
      "#d63b2e",
    ],
    [
      "--sidebar",
      "#000000",
    ],
    [
      "--sidebar-foreground",
      "#f2f2f2",
    ],
    [
      "--sidebar-primary",
      "#d63b2e",
    ],
    [
      "--sidebar-primary-foreground",
      "#ffffff",
    ],
    [
      "--sidebar-accent",
      "#181818",
    ],
    [
      "--sidebar-accent-foreground",
      "#f2f2f2",
    ],
    [
      "--sidebar-border",
      "#3a3a3a",
    ],
    [
      "--sidebar-ring",
      "#d63b2e",
    ],
    [
      "--radius",
      "0.25rem",
    ],
    [
      "--border-style",
      "dotted",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "10px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "'Space Grotesk', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "'DotGothic16', monospace",
    ],
    [
      "--chrome-tracking",
      "0.02em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#0b0b0b",
    ],
    [
      "--terminal-foreground",
      "#f2f2f2",
    ],
    [
      "--terminal-cursor",
      "#d63b2e",
    ],
    [
      "--terminal-cursor-accent",
      "#0b0b0b",
    ],
    [
      "--terminal-selection",
      "rgba(214, 59, 46, 0.32)",
    ],
    [
      "--terminal-ansi-black",
      "#2a2a2a",
    ],
    [
      "--terminal-ansi-red",
      "#d63b2e",
    ],
    [
      "--terminal-ansi-green",
      "#6a9c8a",
    ],
    [
      "--terminal-ansi-yellow",
      "#e0b84a",
    ],
    [
      "--terminal-ansi-blue",
      "#5a8fc2",
    ],
    [
      "--terminal-ansi-magenta",
      "#a878b0",
    ],
    [
      "--terminal-ansi-cyan",
      "#6a9c9c",
    ],
    [
      "--terminal-ansi-white",
      "#c6c6c6",
    ],
    [
      "--terminal-ansi-bright-black",
      "#8a8a8a",
    ],
    [
      "--terminal-ansi-bright-red",
      "#e84c3d",
    ],
    [
      "--terminal-ansi-bright-green",
      "#7dae9b",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#ebd06a",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#6ca2d4",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#b98bc1",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#7daeae",
    ],
    [
      "--terminal-ansi-bright-white",
      "#f2f2f2",
    ],
    [
      "--syntax-comment",
      "#8a8a8a",
    ],
    [
      "--syntax-keyword",
      "#a878b0",
    ],
    [
      "--syntax-string",
      "#6a9c8a",
    ],
    [
      "--syntax-number",
      "#e0b84a",
    ],
    [
      "--syntax-constant",
      "#b98bc1",
    ],
    [
      "--syntax-func",
      "#5a8fc2",
    ],
    [
      "--syntax-variable",
      "#f2f2f2",
    ],
    [
      "--syntax-property",
      "#6a9c9c",
    ],
    [
      "--syntax-gutter-fg",
      "#8a8a8a",
    ],
    [
      "--syntax-type",
      "#7daeae",
    ],
    [
      "--syntax-operator",
      "#f2f2f2",
    ],
    [
      "--syntax-tag",
      "#db4133",
    ],
    [
      "--syntax-tag-bracket",
      "#8a8a8a",
    ],
    [
      "--syntax-attr",
      "#ebd06a",
    ],
    [
      "--syntax-attr-value",
      "#6a9c8a",
    ],
    [
      "--syntax-heading",
      "#5a8fc2",
    ],
    [
      "--syntax-link",
      "#6a9c9c",
    ],
    [
      "--syntax-invalid",
      "#e84c3d",
    ],
    [
      "--status-added",
      "#6a9c8a",
    ],
    [
      "--status-modified",
      "#e0b84a",
    ],
    [
      "--status-deleted",
      "#e24739",
    ],
    [
      "--status-renamed",
      "#5a8fc2",
    ],
    [
      "--status-warning",
      "#e0b84a",
    ],
    [
      "--status-conflict",
      "#6a9c9c",
    ],
    [
      "--status-ok",
      "#6a9c8a",
    ],
    [
      "--emph-faint",
      "12%",
    ],
    [
      "--emph-subtle",
      "32%",
    ],
    [
      "--emph-soft",
      "45%",
    ],
    [
      "--emph-medium",
      "55%",
    ],
    [
      "--emph-strong",
      "68%",
    ],
    [
      "--emph-bold",
      "88%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > nothing-light 1`] = `
{
  "id": "nothing",
  "mode": "light",
  "vars": [
    [
      "--background",
      "#f7f7f7",
    ],
    [
      "--foreground",
      "#111111",
    ],
    [
      "--card",
      "#ffffff",
    ],
    [
      "--card-foreground",
      "#111111",
    ],
    [
      "--popover",
      "#ffffff",
    ],
    [
      "--popover-foreground",
      "#111111",
    ],
    [
      "--primary",
      "#c8342a",
    ],
    [
      "--primary-foreground",
      "#ffffff",
    ],
    [
      "--secondary",
      "#ececec",
    ],
    [
      "--secondary-foreground",
      "#111111",
    ],
    [
      "--muted",
      "#eeeeee",
    ],
    [
      "--muted-foreground",
      "#666666",
    ],
    [
      "--accent",
      "#e8e8e8",
    ],
    [
      "--accent-foreground",
      "#111111",
    ],
    [
      "--destructive",
      "#c8342a",
    ],
    [
      "--border",
      "#b8b8b8",
    ],
    [
      "--input",
      "#b8b8b8",
    ],
    [
      "--ring",
      "#c8342a",
    ],
    [
      "--sidebar",
      "#eaeaea",
    ],
    [
      "--sidebar-foreground",
      "#111111",
    ],
    [
      "--sidebar-primary",
      "#c8342a",
    ],
    [
      "--sidebar-primary-foreground",
      "#ffffff",
    ],
    [
      "--sidebar-accent",
      "#e0e0e0",
    ],
    [
      "--sidebar-accent-foreground",
      "#111111",
    ],
    [
      "--sidebar-border",
      "#b8b8b8",
    ],
    [
      "--sidebar-ring",
      "#c8342a",
    ],
    [
      "--radius",
      "0.25rem",
    ],
    [
      "--border-style",
      "dotted",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "10px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "'Space Grotesk', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "'DotGothic16', monospace",
    ],
    [
      "--chrome-tracking",
      "0.02em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#f7f7f7",
    ],
    [
      "--terminal-foreground",
      "#111111",
    ],
    [
      "--terminal-cursor",
      "#c8342a",
    ],
    [
      "--terminal-cursor-accent",
      "#f7f7f7",
    ],
    [
      "--terminal-selection",
      "rgba(200, 52, 42, 0.22)",
    ],
    [
      "--terminal-ansi-black",
      "#e0e0e0",
    ],
    [
      "--terminal-ansi-red",
      "#c8342a",
    ],
    [
      "--terminal-ansi-green",
      "#2e7d5b",
    ],
    [
      "--terminal-ansi-yellow",
      "#b8860b",
    ],
    [
      "--terminal-ansi-blue",
      "#2b6cb0",
    ],
    [
      "--terminal-ansi-magenta",
      "#805ad5",
    ],
    [
      "--terminal-ansi-cyan",
      "#2c7a7b",
    ],
    [
      "--terminal-ansi-white",
      "#3a3a3a",
    ],
    [
      "--terminal-ansi-bright-black",
      "#666666",
    ],
    [
      "--terminal-ansi-bright-red",
      "#a82e23",
    ],
    [
      "--terminal-ansi-bright-green",
      "#236347",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#966d09",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#22548a",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#6b46c1",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#236162",
    ],
    [
      "--terminal-ansi-bright-white",
      "#111111",
    ],
    [
      "--syntax-comment",
      "#666666",
    ],
    [
      "--syntax-keyword",
      "#805ad5",
    ],
    [
      "--syntax-string",
      "#2e7d5b",
    ],
    [
      "--syntax-number",
      "#996800",
    ],
    [
      "--syntax-constant",
      "#6b46c1",
    ],
    [
      "--syntax-func",
      "#2b6cb0",
    ],
    [
      "--syntax-variable",
      "#111111",
    ],
    [
      "--syntax-property",
      "#2c7a7b",
    ],
    [
      "--syntax-gutter-fg",
      "#666666",
    ],
    [
      "--syntax-type",
      "#236162",
    ],
    [
      "--syntax-operator",
      "#111111",
    ],
    [
      "--syntax-tag",
      "#c8342a",
    ],
    [
      "--syntax-tag-bracket",
      "#666666",
    ],
    [
      "--syntax-attr",
      "#936b03",
    ],
    [
      "--syntax-attr-value",
      "#2e7d5b",
    ],
    [
      "--syntax-heading",
      "#2b6cb0",
    ],
    [
      "--syntax-link",
      "#2c7a7b",
    ],
    [
      "--syntax-invalid",
      "#a82e23",
    ],
    [
      "--status-added",
      "#2e7d5b",
    ],
    [
      "--status-modified",
      "#996800",
    ],
    [
      "--status-deleted",
      "#c8342a",
    ],
    [
      "--status-renamed",
      "#2b6cb0",
    ],
    [
      "--status-warning",
      "#996800",
    ],
    [
      "--status-conflict",
      "#2c7a7b",
    ],
    [
      "--status-ok",
      "#2e7d5b",
    ],
    [
      "--emph-faint",
      "12%",
    ],
    [
      "--emph-subtle",
      "32%",
    ],
    [
      "--emph-soft",
      "45%",
    ],
    [
      "--emph-medium",
      "55%",
    ],
    [
      "--emph-strong",
      "68%",
    ],
    [
      "--emph-bold",
      "88%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > stardew-dark 1`] = `
{
  "id": "stardew",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "#241609",
    ],
    [
      "--foreground",
      "#f2dcc0",
    ],
    [
      "--card",
      "#33200e",
    ],
    [
      "--card-foreground",
      "#f2dcc0",
    ],
    [
      "--popover",
      "#3d2712",
    ],
    [
      "--popover-foreground",
      "#f2dcc0",
    ],
    [
      "--primary",
      "#e8a33d",
    ],
    [
      "--primary-foreground",
      "#241609",
    ],
    [
      "--secondary",
      "#2e1d0d",
    ],
    [
      "--secondary-foreground",
      "#f2dcc0",
    ],
    [
      "--muted",
      "#2e1d0d",
    ],
    [
      "--muted-foreground",
      "#b89a78",
    ],
    [
      "--accent",
      "#4a2e14",
    ],
    [
      "--accent-foreground",
      "#f2dcc0",
    ],
    [
      "--destructive",
      "#c4453a",
    ],
    [
      "--border",
      "#6b4423",
    ],
    [
      "--input",
      "#6b4423",
    ],
    [
      "--ring",
      "#e8a33d",
    ],
    [
      "--sidebar",
      "#150d06",
    ],
    [
      "--sidebar-foreground",
      "#f2dcc0",
    ],
    [
      "--sidebar-primary",
      "#e8a33d",
    ],
    [
      "--sidebar-primary-foreground",
      "#241609",
    ],
    [
      "--sidebar-accent",
      "#4a2e14",
    ],
    [
      "--sidebar-accent-foreground",
      "#f2dcc0",
    ],
    [
      "--sidebar-border",
      "#6b4423",
    ],
    [
      "--sidebar-ring",
      "#e8a33d",
    ],
    [
      "--radius",
      "0rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "3px",
    ],
    [
      "--frame-radius",
      "0px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "2px",
    ],
    [
      "--panel-border-width",
      "2px",
    ],
    [
      "--slot-border-width",
      "2px",
    ],
    [
      "--control-border-width",
      "2px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#7a5228",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "#0d0703",
    ],
    [
      "--lift-depth",
      "2px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--chrome-tracking",
      "0.01em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#1e1208",
    ],
    [
      "--terminal-foreground",
      "#f2dcc0",
    ],
    [
      "--terminal-cursor",
      "#e8a33d",
    ],
    [
      "--terminal-cursor-accent",
      "#1e1208",
    ],
    [
      "--terminal-selection",
      "rgba(232,163,61,0.30)",
    ],
    [
      "--terminal-ansi-black",
      "#2a1a0c",
    ],
    [
      "--terminal-ansi-red",
      "#f0685a",
    ],
    [
      "--terminal-ansi-green",
      "#9ac356",
    ],
    [
      "--terminal-ansi-yellow",
      "#eec052",
    ],
    [
      "--terminal-ansi-blue",
      "#74b0e2",
    ],
    [
      "--terminal-ansi-magenta",
      "#dc8ec2",
    ],
    [
      "--terminal-ansi-cyan",
      "#6cc9bf",
    ],
    [
      "--terminal-ansi-white",
      "#e3cfa5",
    ],
    [
      "--terminal-ansi-bright-black",
      "#ac8558",
    ],
    [
      "--terminal-ansi-bright-red",
      "#ff9086",
    ],
    [
      "--terminal-ansi-bright-green",
      "#bde383",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#ffdf88",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#a3d0f5",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#f2b4da",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#9ae8dd",
    ],
    [
      "--terminal-ansi-bright-white",
      "#fff6e0",
    ],
    [
      "--syntax-comment",
      "#ac8558",
    ],
    [
      "--syntax-keyword",
      "#dc8ec2",
    ],
    [
      "--syntax-string",
      "#9ac356",
    ],
    [
      "--syntax-number",
      "#eec052",
    ],
    [
      "--syntax-constant",
      "#f2b4da",
    ],
    [
      "--syntax-func",
      "#74b0e2",
    ],
    [
      "--syntax-variable",
      "#f2dcc0",
    ],
    [
      "--syntax-property",
      "#6cc9bf",
    ],
    [
      "--syntax-gutter-fg",
      "#ac8558",
    ],
    [
      "--syntax-type",
      "#9ae8dd",
    ],
    [
      "--syntax-operator",
      "#f2dcc0",
    ],
    [
      "--syntax-tag",
      "#f0685a",
    ],
    [
      "--syntax-tag-bracket",
      "#ac8558",
    ],
    [
      "--syntax-attr",
      "#ffdf88",
    ],
    [
      "--syntax-attr-value",
      "#9ac356",
    ],
    [
      "--syntax-heading",
      "#74b0e2",
    ],
    [
      "--syntax-link",
      "#6cc9bf",
    ],
    [
      "--syntax-invalid",
      "#ff9086",
    ],
    [
      "--status-added",
      "#9ac356",
    ],
    [
      "--status-modified",
      "#eec052",
    ],
    [
      "--status-deleted",
      "#f0685a",
    ],
    [
      "--status-renamed",
      "#74b0e2",
    ],
    [
      "--status-warning",
      "#eec052",
    ],
    [
      "--status-conflict",
      "#6cc9bf",
    ],
    [
      "--status-ok",
      "#9ac356",
    ],
    [
      "--emph-faint",
      "15%",
    ],
    [
      "--emph-subtle",
      "40%",
    ],
    [
      "--emph-soft",
      "55%",
    ],
    [
      "--emph-medium",
      "70%",
    ],
    [
      "--emph-strong",
      "85%",
    ],
    [
      "--emph-bold",
      "100%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > stardew-light 1`] = `
{
  "id": "stardew",
  "mode": "light",
  "vars": [
    [
      "--background",
      "#f4e4c1",
    ],
    [
      "--foreground",
      "#3b2712",
    ],
    [
      "--card",
      "#e9d4a8",
    ],
    [
      "--card-foreground",
      "#3b2712",
    ],
    [
      "--popover",
      "#fbf1da",
    ],
    [
      "--popover-foreground",
      "#3b2712",
    ],
    [
      "--primary",
      "#a85d22",
    ],
    [
      "--primary-foreground",
      "#fbf1da",
    ],
    [
      "--secondary",
      "#e3d0a4",
    ],
    [
      "--secondary-foreground",
      "#3b2712",
    ],
    [
      "--muted",
      "#e3d0a4",
    ],
    [
      "--muted-foreground",
      "#6b5335",
    ],
    [
      "--accent",
      "#e3b970",
    ],
    [
      "--accent-foreground",
      "#3b2712",
    ],
    [
      "--destructive",
      "#a3342a",
    ],
    [
      "--border",
      "#7a5228",
    ],
    [
      "--input",
      "#7a5228",
    ],
    [
      "--ring",
      "#a85d22",
    ],
    [
      "--sidebar",
      "#e0c795",
    ],
    [
      "--sidebar-foreground",
      "#3b2712",
    ],
    [
      "--sidebar-primary",
      "#a85d22",
    ],
    [
      "--sidebar-primary-foreground",
      "#fbf1da",
    ],
    [
      "--sidebar-accent",
      "#e3b970",
    ],
    [
      "--sidebar-accent-foreground",
      "#3b2712",
    ],
    [
      "--sidebar-border",
      "#7a5228",
    ],
    [
      "--sidebar-ring",
      "#a85d22",
    ],
    [
      "--radius",
      "0rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "3px",
    ],
    [
      "--frame-radius",
      "0px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "2px",
    ],
    [
      "--panel-border-width",
      "2px",
    ],
    [
      "--slot-border-width",
      "2px",
    ],
    [
      "--control-border-width",
      "2px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#d9b877",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "#7a5228",
    ],
    [
      "--lift-depth",
      "2px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--chrome-tracking",
      "0.01em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#f4e4c1",
    ],
    [
      "--terminal-foreground",
      "#3b2712",
    ],
    [
      "--terminal-cursor",
      "#a85d22",
    ],
    [
      "--terminal-cursor-accent",
      "#f4e4c1",
    ],
    [
      "--terminal-selection",
      "rgba(168,93,34,0.26)",
    ],
    [
      "--terminal-ansi-black",
      "#2b1a0c",
    ],
    [
      "--terminal-ansi-red",
      "#a3271d",
    ],
    [
      "--terminal-ansi-green",
      "#325816",
    ],
    [
      "--terminal-ansi-yellow",
      "#7a4404",
    ],
    [
      "--terminal-ansi-blue",
      "#1a4675",
    ],
    [
      "--terminal-ansi-magenta",
      "#7a2559",
    ],
    [
      "--terminal-ansi-cyan",
      "#0e5652",
    ],
    [
      "--terminal-ansi-white",
      "#5f452a",
    ],
    [
      "--terminal-ansi-bright-black",
      "#6e4f32",
    ],
    [
      "--terminal-ansi-bright-red",
      "#941f16",
    ],
    [
      "--terminal-ansi-bright-green",
      "#284d12",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#6e3d02",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#143d68",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#681c4c",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#094a46",
    ],
    [
      "--terminal-ansi-bright-white",
      "#3b2712",
    ],
    [
      "--syntax-comment",
      "#6e4f32",
    ],
    [
      "--syntax-keyword",
      "#7a2559",
    ],
    [
      "--syntax-string",
      "#325816",
    ],
    [
      "--syntax-number",
      "#7a4404",
    ],
    [
      "--syntax-constant",
      "#681c4c",
    ],
    [
      "--syntax-func",
      "#1a4675",
    ],
    [
      "--syntax-variable",
      "#3b2712",
    ],
    [
      "--syntax-property",
      "#0e5652",
    ],
    [
      "--syntax-gutter-fg",
      "#6e4f32",
    ],
    [
      "--syntax-type",
      "#094a46",
    ],
    [
      "--syntax-operator",
      "#3b2712",
    ],
    [
      "--syntax-tag",
      "#a3271d",
    ],
    [
      "--syntax-tag-bracket",
      "#6e4f32",
    ],
    [
      "--syntax-attr",
      "#6e3d02",
    ],
    [
      "--syntax-attr-value",
      "#325816",
    ],
    [
      "--syntax-heading",
      "#1a4675",
    ],
    [
      "--syntax-link",
      "#0e5652",
    ],
    [
      "--syntax-invalid",
      "#941f16",
    ],
    [
      "--status-added",
      "#325816",
    ],
    [
      "--status-modified",
      "#7a4404",
    ],
    [
      "--status-deleted",
      "#a3271d",
    ],
    [
      "--status-renamed",
      "#1a4675",
    ],
    [
      "--status-warning",
      "#7a4404",
    ],
    [
      "--status-conflict",
      "#0e5652",
    ],
    [
      "--status-ok",
      "#325816",
    ],
    [
      "--emph-faint",
      "15%",
    ],
    [
      "--emph-subtle",
      "40%",
    ],
    [
      "--emph-soft",
      "55%",
    ],
    [
      "--emph-medium",
      "70%",
    ],
    [
      "--emph-strong",
      "85%",
    ],
    [
      "--emph-bold",
      "100%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > terra-default-dark 1`] = `
{
  "id": "terra-default",
  "mode": "dark",
  "vars": [
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--emph-faint",
      "10%",
    ],
    [
      "--emph-subtle",
      "30%",
    ],
    [
      "--emph-soft",
      "40%",
    ],
    [
      "--emph-medium",
      "50%",
    ],
    [
      "--emph-strong",
      "60%",
    ],
    [
      "--emph-bold",
      "85%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > terra-default-light 1`] = `
{
  "id": "terra-default",
  "mode": "light",
  "vars": [
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--emph-faint",
      "10%",
    ],
    [
      "--emph-subtle",
      "30%",
    ],
    [
      "--emph-soft",
      "40%",
    ],
    [
      "--emph-medium",
      "50%",
    ],
    [
      "--emph-strong",
      "60%",
    ],
    [
      "--emph-bold",
      "85%",
    ],
  ],
}
`;
